--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -115,7 +115,7 @@ UNITTESTS = \
   help \
   abstptr abstract alias alttypes ansireserved argorder \
   args arraydims blocks break cases cast charlit clauses commentchar compdestroy \
-  compoundliterals constannot controldepth csyntax czechnames czechoslovaknames deadparam \
+  compoundliterals compoundstmt constannot controldepth csyntax czechnames czechoslovaknames deadparam \
   decl divzero enum exports external fields flags forbody format freearray \
   funcpointer functionmacro glob globals impabstract info init inparam internal iter keep libs \
   linked lintcomments list loopexec \
@@ -126,7 +126,7 @@ UNITTESTS = \
   specclauses \
   special stack staticarray strings \
   stringliteral \
-  structassign typequals ud ulstypes union unioninit unreachable unsignedcompare \
+  structassign typequals typeof ud ulstypes union unioninit unreachable unsignedcompare \
   unused ullint utypes void widestrings
 
 UNITEXPECTS = $(addsuffix .expect, $(UNITTESTS))
@@ -287,6 +287,8 @@ EXTRA_DIST = ./abst_t.lcl ./abst_t.lcs  \
               ./commentchar.c \
               ./commentcmd.c \
               ./compdestroy.c \
+              ./compoundliterals.c ./compoundliterals.expect \
+              ./compoundstmt.c ./compoundstmt.expect \
               ./csyntax.c \
               ./constannot.c \
               ./controldepth.c \
@@ -1102,6 +1104,10 @@ compdestroy:
 compoundliterals:
 	${SPLINTRN} compoundliterals.c 
 
+.PHONY: compoundstmt
+compoundstmt:
+	${SPLINTRN} compoundstmt.c -expect 3
+
 .PHONY: constannot
 constannot:
 	${SPLINTRN} constannot.c +boundswrite -exportlocal -expect 2
@@ -1568,6 +1574,10 @@ strings:
 .PHONY: structassign
 structassign:
 	-$(SPLINTR) structassign.c -expect 4
+
+.PHONY: typeof
+typeof:
+	-$(SPLINTR) typeof.c -expect 2
 
 .PHONY: typequals
 typequals:
