o Make lltok an abstract type, a pointer to structure instead of a plain   struct.  There are still some memory leaks in the parser --- all   tokens should be deallocated.
o Added messagestream, warningstream and errorstream control flags so
  each type of message can be directed to a different stream:
     messagestreamstdout
     messagestreamstderr
     messagestream <file>

--- a/test/tests2.4/Makefile
+++ b/test/tests2.4/Makefile
@@ -76,7 +76,7 @@ alignof:
 	$(SPLINT) alignof.c -expect 2
 
 source:
-	$(SPLINT) -D DBL_MANT_DIG=25 source.c
+	$(SPLINT) -D DBL_MANT_DIG=25 source.c -expect 1
 
 
 
