Fixed problem with print format for +showalluses.

--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -114,7 +114,7 @@ SPLINTRNEST = $(SPLINTRNNEST) -exportlocal +debugfcnconstraint
 UNITTESTS = \
   help \
   abstptr abstract alias alttypes ansireserved argorder \
-  args arraydims arrayinit blocks break cases cast charlit clauses commentchar compdestroy \
+  args arraydims arrayinit arraylit blocks break cases cast charlit clauses commentchar compdestroy \
   compoundliterals compoundstmt constannot controldepth csyntax czechnames czechoslovaknames deadparam \
   decl divzero enum exports external fields flags forbody format freearray \
   funcpointer functionmacro glob globals impabstract info init inparam internal iter keep libs \
@@ -272,6 +272,7 @@ EXTRA_DIST = ./abst_t.lcl ./abst_t.lcs  \
               ./argorder5.c \
               ./args.c \
               ./arrayinit.c \
+              ./arraylit.c \
               ./blocks.c \
               ./branchstate.c \
               ./break.c \
@@ -590,6 +591,7 @@ EXTRA_DIST = ./abst_t.lcl ./abst_t.lcs  \
               argorder.expect \
               args.expect \
               arrayinit.expect \
+              arraylit.expect \
               blocks.expect \
               branchstate.expect \
               break.expect \
@@ -1044,6 +1046,11 @@ arraydims:
 .PHONY: arrayinit
 arrayinit:
 	-$(SPLINTR) arrayinit.c -expect 9
+
+.PHONY: arraylit
+arraylit:
+	-$(SPLINTR) arraylit.c -expect 2
+	-$(SPLINTR) arraylit.c +stringliteralsmaller -expect 4
 
 .PHONY: blocks
 blocks:
@@ -1568,10 +1575,14 @@ stack:
 staticarray:
 	-$(SPLINTR) staticarray.c -expect 3
 
+###
+### evans 2002-03-16: Default setting of stringliteralnoroomfinalnull changed
+### 
+
 .PHONY: stringliteral
 stringliteral:
-	-$(SPLINTR) stringliteral.c +stringliteralnoroomfinalnull -expect 4
-	-$(SPLINTR) stringliteral.c -expect 3
+	-$(SPLINTR) stringliteral.c -stringliteralnoroomfinalnull -expect 3
+	-$(SPLINTR) stringliteral.c -expect 4
 
 .PHONY: strings
 strings:
