--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -126,7 +126,8 @@ UNITTESTS = \
   specclauses \
   special stack staticarray strings \
   stringliteral \
-  structassign typequals typeof ud ulstypes union unioninit unreachable unsignedcompare \
+  structassign typequals typeof ud ulstypes union unioninit \
+  unnamedsu unreachable unsignedcompare \
   unused ullint utypes void widestrings
 
 UNITEXPECTS = $(addsuffix .expect, $(UNITTESTS))
@@ -427,6 +428,7 @@ EXTRA_DIST = ./abst_t.lcl ./abst_t.lcs  \
               ./union.c \
               ./unreachable.c \
               ./unsignedcompare.c \
+              ./unnamedsu.c \
               ./unused.c \
               ./void.c \
               ./conditions/miroslaw.c \
@@ -692,6 +694,7 @@ EXTRA_DIST = ./abst_t.lcl ./abst_t.lcs  \
               ullint.expect \
               ulstypes.expect \
               union.expect \
+              unnamedsu.expect \
               unreachable.expect \
               unsignedcompare.expect \
               unused.expect \
@@ -1628,6 +1631,10 @@ union:
 .PHONY: unioninit
 unioninit:
 	-$(SPLINTR) unioninit.c -expect 2
+
+.PHONY: unnamedsu
+unnamedsu:
+	-$(SPLINTR) unnamedsu.c -expect 0
 
 .PHONY: unreachable
 unreachable:
