--- a/Makefile.in
+++ b/Makefile.in
@@ -111,7 +111,7 @@ RECURSIVE_TARGETS = info-recursive dvi-recursive install-info-recursive \
 	uninstall-info-recursive all-recursive install-data-recursive \
 	install-exec-recursive installdirs-recursive install-recursive \
 	uninstall-recursive check-recursive installcheck-recursive
-DIST_COMMON = README ./stamp-h.in ChangeLog Makefile.am Makefile.in \
+DIST_COMMON = README ./stamp-h.in Makefile.am Makefile.in TODO \
 	acinclude.m4 aclocal.m4 config.hin config/config.guess \
 	config/config.sub config/depcomp config/install-sh \
 	config/missing config/mkinstalldirs configure configure.ac
@@ -422,6 +422,8 @@ uninstall-info: uninstall-info-recursive
 	uninstall uninstall-am uninstall-info-am \
 	uninstall-info-recursive uninstall-recursive
 
+
+.PHONY: test
 
 #try to remake these but don't stop if it fails.
 configure.binary:configure.binary.ac
